--- a/css/coc.css
+++ b/css/coc.css
@@ -4,49 +4,58 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #031321;
     height: 100%;
+    color: rgb(255, 255, 255, 0.9);
 }
-section {
-    padding: 0 100px;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-}
+
 .box {
     position: relative;
     padding: 50px;
     background-color: #282828;
-    box-shadow: 0 5px 25px rgba(255,255,255,0.8); 
-    width:100%;
+    box-shadow: 0 5px 25px rgba(255, 255, 255, 0.8);
+    width: 100%;
     height: 500%;
     margin: 50px;
-    transition:0.5s;
+    transition: 0.5s;
     border-radius: 20px;
 }
-.box h2 {
-    margin: 0 0 20px;
-    padding: 0;
+
+h2 {
+    margin: 10px;
     font-size: 40px;
-    color: #fff;
     text-align: center;
     text-transform: uppercase;
 }
 
-.box p{
+p {
     margin: 0;
     padding: 0;
     font-size: medium;
-    color: #fff;
 }
+
 li {
-    
     margin: 0;
     padding: 0;
     font-size: medium;
-    color: #fff;
 }
+
 span {
     color: rgb(245, 77, 77);
     font-size: 66px;
+}
+
+.first {
+    width: 50%;
+    margin-top: 30px;
+    text-align: justify;
+}
+
+hr {
+    background-color: rgb(245, 77, 77);
+    ;
+}
+
+footer {
+    margin: 50px;
+    text-align: center;
+    color: rgb(255, 255, 255, 0.8);
 }
