--- a/css/coc.css
+++ b/css/coc.css
@@ -1,22 +1,10 @@
+html,
 body {
     margin: 0;
-    padding: 0;
+    overflow-x: hidden;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #031321;
-    height: 100%;
     color: rgb(255, 255, 255, 0.9);
-}
-
-.box {
-    position: relative;
-    padding: 50px;
-    background-color: #282828;
-    box-shadow: 0 5px 25px rgba(255, 255, 255, 0.8);
-    width: 100%;
-    height: 500%;
-    margin: 50px;
-    transition: 0.5s;
-    border-radius: 20px;
 }
 
 h2 {
@@ -44,8 +32,9 @@ span {
 }
 
 .first {
-    width: 50%;
+    /* width: 50%; */
     margin-top: 30px;
+    padding: 0 20px;
     text-align: justify;
 }
 
