--- a/css/coc.css
+++ b/css/coc.css
@@ -26,9 +26,9 @@ li {
     font-size: medium;
 }
 
-span {
+.c {
     color: rgb(245, 77, 77);
-    font-size: 66px;
+    font-size: 65px;
 }
 
 .first {
